fixed responsive issues on small screens

--- a/index.css
+++ b/index.css
@@ -316,7 +316,7 @@ footer {
     }
 }
 
-@media screen and (max-width: 849px) and (min-width: 376px) {
+@media screen and (max-width: 849px) and (min-width: 451px) {
     nav img {
         margin-left: 10px;
         cursor: pointer;
@@ -388,7 +388,7 @@ footer {
     }
 
     #landing-improved img {
-        height: 55vh;
+        height: 50vh;
         position: absolute;
         top: 10vh;
         width: 98%;
@@ -396,7 +396,7 @@ footer {
     }
 
     #landing-improved p {
-        margin-top: 70vh;
+        margin-top: 60vh;
     }
 
     #landing-improved h1 {
@@ -438,7 +438,7 @@ footer {
     }
 }
 
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 450px) {
     nav img {
         margin-left: 10px;
         cursor: pointer;
@@ -510,15 +510,15 @@ footer {
     }
 
     #landing-improved img {
-        height: 55vh;
+        height: 30%;
         position: absolute;
-        top: 10vh;
+        top: 20vh;
         width: 98%;
         margin-left: -2%;
     }
 
     #landing-improved p {
-        margin-top: 60vh;
+        margin-top: 50vh;
     }
 
     #landing-improved h1 {
